pluma_parser/tests/snapshots/parse_success__def_labeled_tuple_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello (one :: Int, two :: String) -> String {\n  |a| a.two\n}"
---

=== Source ===
def hello (one :: Int, two :: String) -> String {
  |a| a.two
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        63,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                63,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        63,
                    ),
                    visibility: Public,
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        37,
                                    ),
                                    kind: LabeledTuple(
                                        [
                                            (
                                                IdentifierNode {
                                                    pos: (
                                                        11,
                                                        14,
                                                    ),
                                                    name: "one",
                                                },
                                                TypeExprNode {
                                                    pos: (
                                                        18,
                                                        21,
                                                    ),
                                                    kind: Single(
                                                        TypeIdentifierNode {
                                                            pos: (
                                                                18,
                                                                21,
                                                            ),
                                                            name: "Int",
                                                            generics: [],
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ),
                                            (
                                                IdentifierNode {
                                                    pos: (
                                                        23,
                                                        26,
                                                    ),
                                                    name: "two",
                                                },
                                                TypeExprNode {
                                                    pos: (
                                                        30,
                                                        36,
                                                    ),
                                                    kind: Single(
                                                        TypeIdentifierNode {
                                                            pos: (
                                                                30,
                                                                36,
                                                            ),
                                                            name: "String",
                                                            generics: [],
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ),
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: Some(
                        TypeExprNode {
                            pos: (
                                41,
                                47,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        41,
                                        47,
                                    ),
                                    name: "String",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    generic_type_constraints: [],
                    block: BlockNode {
                        pos: (
                            48,
                            63,
                        ),
                        params: [
                            PatternNode {
                                pos: (
                                    53,
                                    54,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            53,
                                            54,
                                        ),
                                        name: "a",
                                    },
                                    false,
                                ),
                            },
                        ],
                        body: [
                            StatementNode {
                                pos: (
                                    56,
                                    61,
                                ),
                                kind: Expr(
                                    ExprNode {
                                        pos: (
                                            56,
                                            61,
                                        ),
                                        kind: FieldAccess {
                                            receiver: ExprNode {
                                                pos: (
                                                    56,
                                                    57,
                                                ),
                                                kind: Identifier(
                                                    IdentifierNode {
                                                        pos: (
                                                            56,
                                                            57,
                                                        ),
                                                        name: "a",
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            field: IdentifierNode {
                                                pos: (
                                                    58,
                                                    61,
                                                ),
                                                name: "two",
                                            },
                                        },
                                        typ: Unknown,
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ],
}

