pluma_parser/tests/snapshots/parse_success__def_one_part_two_args.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello (String, Int) {\n  a, b => \"wow!\"\n}"
---

=== Source ===
def hello (String, Int) {
  a, b => "wow!"
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        44,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                44,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        44,
                    ),
                    visibility: Public,
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        23,
                                    ),
                                    kind: Tuple(
                                        [
                                            TypeExprNode {
                                                pos: (
                                                    11,
                                                    17,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            11,
                                                            17,
                                                        ),
                                                        name: "String",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            TypeExprNode {
                                                pos: (
                                                    19,
                                                    22,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            19,
                                                            22,
                                                        ),
                                                        name: "Int",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                28,
                                29,
                            ),
                            name: "a",
                        },
                        IdentifierNode {
                            pos: (
                                31,
                                32,
                            ),
                            name: "b",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                37,
                                41,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        37,
                                        41,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                37,
                                                41,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

