pluma_parser/tests/snapshots/parse_success__def_receiver_two_parts_multiple_args.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def Person . hello (String, Int) world () {\n  a, b, c => \"wow!\"\n}"
---

=== Source ===
def Person . hello (String, Int) world () {
  a, b, c => "wow!"
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        65,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                65,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        65,
                    ),
                    visibility: Public,
                    kind: Method {
                        receiver: TypeIdentifierNode {
                            pos: (
                                4,
                                10,
                            ),
                            name: "Person",
                            generics: [],
                        },
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        13,
                                        18,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        19,
                                        32,
                                    ),
                                    kind: UnlabeledTuple(
                                        [
                                            TypeExprNode {
                                                pos: (
                                                    20,
                                                    26,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            20,
                                                            26,
                                                        ),
                                                        name: "String",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            TypeExprNode {
                                                pos: (
                                                    28,
                                                    31,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            28,
                                                            31,
                                                        ),
                                                        name: "Int",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        33,
                                        38,
                                    ),
                                    name: "world",
                                },
                                TypeExprNode {
                                    pos: (
                                        39,
                                        41,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                46,
                                47,
                            ),
                            name: "a",
                        },
                        IdentifierNode {
                            pos: (
                                49,
                                50,
                            ),
                            name: "b",
                        },
                        IdentifierNode {
                            pos: (
                                52,
                                53,
                            ),
                            name: "c",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                58,
                                62,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        58,
                                        62,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                58,
                                                62,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

